--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "## Step 1: Donwload Config file \n",
     "\n",
-    "Download the config file from NRP portal - https://portal.nrp-nautilus.io"
+    "##### Step 1A Download the config file from NRP portal - https://portal.nrp-nautilus.io"
    ]
   },
   {
@@ -40,20 +40,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdde3f51-6c49-4485-802d-e2aaa7084a55",
+   "id": "c2871a66",
+   "metadata": {},
+   "source": [
+    "##### Step 1B Open downloaded config file and verify your correct ``namespace`` name\n",
+    "\n",
+    " <img src=\"./media/verify_config_file.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af0224eb",
    "metadata": {},
    "source": [
     "## Step 2: Upload Your Config\n",
+    "##### Step 2A Launch Jupyter Lab instance server ``Link`` - https://jupyterhub-west.nrp-nautilus.io\n",
     "\n",
-    "``Add a text how to access and open the Jupyter Lab interface.``\n",
-    "\n",
-    "``https://jupyterhub-west.nrp-nautilus.io/user/USER-NAME@unomaha.edu/lab``\n",
-    "\n",
-    "\n",
-    "\n",
-    "``Add a text to make sure that the config file includes namespace (gp-engine-unoselab01) correctly and copy it into a directory .kube. (See the notebook NautilusConfigSetup.ipynb)``\n",
-    "\n",
-    "From the Jupyter Lab interface, click on the Upload symbol, and select the config you have downloaded from the NRP portal"
+    "- There is a notebook to assist you [here](./Step0-Jupyter_lab_starting.ipynb) in launching Jupyter Lab instance.\n",
+    "- Click on the ``Upload symbol``, upload your config file you have downloaded from the NRP portal in your home directory once your jupyter lab instance is launched.\n"
    ]
   },
   {
@@ -62,6 +66,76 @@
    "metadata": {},
    "source": [
     "<img src=\"./media/UploadJupyter.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "625e3f3a",
+   "metadata": {},
+   "source": [
+    "##### Step 2B Getting the Path.\n",
+    "- First we will check if the config has been uploaded or placed in the ``home`` directory of our Jupyter Environment. \n",
+    "\n",
+    "- You will see a success message ``Found config`` with your config path once your config file is found. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "997a5fa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "cfg_path = Path.home().resolve() / \"config\"\n",
+    "\n",
+    "if cfg_path.is_file():\n",
+    "    print(f\"Found config: {cfg_path}\")\n",
+    "else: \n",
+    "    cfg_dir = input(\"Enter directory with config: \")\n",
+    "    cfg_path = Path(cfg_dir).resolve() / \"config\"\n",
+    "    if cfg_path.is_file():\n",
+    "        print(f\"Found config: {cfg_path}\")\n",
+    "    else:\n",
+    "        print(\"ERROR: Re-run this cell and give correct directory\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0904afe0",
+   "metadata": {},
+   "source": [
+    "##### Step 2C Copy config file to .kube directory.\n",
+    "- Ensure the output of the previous cell is **Found Config: /path/to/config** before proceeding. \n",
+    "\n",
+    "- Copy config file to ``.kube`` directory so that **kubectl** and other kuberentes tool can access and manage our kubernetes cluster configuration.\n",
+    "\n",
+    "\n",
+    "- You will get ``SUCCESS: Copied config`` message after file is copied.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa4c68dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from shutil import copy\n",
+    "from pathlib import Path\n",
+    "\n",
+    "dest_dir = Path.home().resolve() / \".kube\"\n",
+    "dest_dir.mkdir(exist_ok=True)\n",
+    "dest_path = dest_dir / \"config\"\n",
+    "\n",
+    "if dest_path.is_file():\n",
+    "    print(\"SUCCESS: Config correctly configured\")\n",
+    "elif cfg_path.is_file() and dest_dir.is_dir():\n",
+    "    copy(cfg_path, dest_path)\n",
+    "    print(\"SUCCESS: Copied config\")\n",
+    "else:\n",
+    "    print(\"ERROR: Ensure you have correct config path\")"
    ]
   },
   {
@@ -98,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
+    "! curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
    ]
   },
   {
@@ -193,15 +267,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b3ee8f-b077-45ef-b082-3334babadf4b",
-   "metadata": {},
-   "source": [
-    "### To learn more about useful kubectl command \n",
-    "Refer: https://www.bluematador.com/learn/kubectl-cheatsheet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8df72418-24ca-454d-9f51-8a60d0075334",
    "metadata": {
     "tags": []
@@ -230,45 +295,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "8b937ef7-b68c-4709-a528-0e635c05c9b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      ">>> \u001b[1m\u001b[32mWelcome to\u001b[39m\u001b[22m \u001b[36mWebi\u001b[39m\u001b[1m\u001b[32m!\u001b[39m\u001b[22m \u001b[2m- modern tools, instant installs.\u001b[22m  <<<\n",
-      "    We expect your experience to be \u001b[3mabsolutely perfect\u001b[23m!\n",
-      "\n",
-      "    \u001b[1m\u001b[33mSuccess\u001b[39m\u001b[22m? Star it!   \u001b[2mhttps://github.com/webinstall/webi-installers\u001b[22m\n",
-      "    \u001b[1m\u001b[33mProblem\u001b[39m\u001b[22m? Report it: \u001b[2mhttps://github.com/webinstall/webi-installers/issues\u001b[22m\n",
-      "                        \u001b[2m(your system is\u001b[22m \u001b[2m\u001b[33mGNU/Linux\u001b[39m\u001b[22m/\u001b[2m\u001b[33mx86_64\u001b[39m\u001b[22m \u001b[2mwith\u001b[22m \u001b[2m\u001b[33mlibc\u001b[39m\u001b[22m \u001b[2m&\u001b[22m \u001b[2m\u001b[33mcurl+wget\u001b[39m\u001b[22m\u001b[2m)\u001b[22m\n",
-      "\n",
-      "\u001b[36mBootstrapping\u001b[39m \u001b[1m\u001b[32mWebi\u001b[39m\u001b[22m\n",
-      "    \u001b[2mFound\u001b[22m \u001b[2m\u001b[32m~/.local/bin/webi\u001b[39m\u001b[22m\n",
-      "    Running \u001b[2m\u001b[35m~/.local/bin/webi k9s@stable\u001b[39m\u001b[22m\n",
-      "\n",
-      "\u001b[36mInstalling\u001b[39m \u001b[1m\u001b[32mk9s\u001b[39m\u001b[22m \u001b[36m...\u001b[39m\n",
-      "    \u001b[2mFound\u001b[22m \u001b[2m\u001b[32m ~/.local/bin\u001b[39m\u001b[22m\n",
-      "    \u001b[1m\u001b[32m'k9s v0.32.4'\u001b[39m\u001b[22m already installed:\n",
-      "    \u001b[1m\u001b[36m~/.local/bin/k9s\u001b[39m\u001b[22m => \u001b[2m\u001b[32m~/.local/opt/k9s-v0.32.4/bin/k9s\u001b[39m\u001b[22m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!curl -sS https://webi.sh/k9s | sh"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "c976bff0-14e4-46f3-a6fe-af37c3cfc194",
    "metadata": {},
    "source": [
     "Step II: Update PATH environment variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8036597a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl -sS https://webi.sh/k9s | sh"
    ]
   },
   {
@@ -323,6 +364,37 @@
    "outputs": [],
    "source": [
     "!k9s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3720d80",
+   "metadata": {},
+   "source": [
+    "## Step 5: Know some useful k9s Commands\n",
+    " \n",
+    "- ``?`` : Wildcard Search for namespace \n",
+    "- ``:`` : Search for resources\n",
+    "- ``:ns`` : List all the namespaces\n",
+    "- ``:pods`` : List all the pods\n",
+    "- ``:jobs`` : List all jobs\n",
+    "- ``:svc`` : List all services\n",
+    "- ``l`` : Print container logs\n",
+    "- ``s`` : Go to container shell\n",
+    "- ``ctrl-d`` : Delete any resource\n",
+    "- ``:esc`` Go back\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99b01102",
+   "metadata": {},
+   "source": [
+    "### To learn more about useful kubectl command \n",
+    "- K9s Cheatsheet: https://www.bluematador.com/learn/kubectl-cheatsheet\n",
+    "- K9s Video tutorial: https://youtu.be/ZwOOJqcKQ8g?si=EMe0vQ2oEBs1Zats\n",
+    " \n",
+    "<iframe width=\"760\" height=\"500\" src=\"https://www.youtube.com/embed/ZwOOJqcKQ8g?si=-LdEo_bO75pmVugp\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
    ]
   }
  ],
