--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step2-persistant_volume_creation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step2-persistant_volume_creation.ipynb
@@ -31,7 +31,7 @@
     "apiVersion: v1\n",
     "kind: PersistentVolumeClaim\n",
     "metadata:\n",
-    "  name: {{ name }}\n",
+    "  name: {{ pvc_name }}\n",
     "spec:\n",
     "  storageClassName: rook-cephfs-central\n",
     "  accessModes:\n",
@@ -40,7 +40,73 @@
     "    requests:\n",
     "      storage: 50Gi\n",
     "```\n",
-    "We are creating a persistent volume in the rook CephFS central storage pool with 50 GB of storage."
+    "We are creating a persistent volume in the rook CephFS central storage pool with 50 GB of storage.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3084883f",
+   "metadata": {},
+   "source": [
+    "##### Step 1A : Let's use `jinja2` to fill in the missing values in our pvc template:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30d10727",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jinja2 import Template\n",
+    "\n",
+    "# read in the template\n",
+    "with open('./yaml_templates/pvc.yml') as file_:\n",
+    "    template = Template(file_.read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c0c9307",
+   "metadata": {},
+   "source": [
+    "Replace the arguments to the `render` function with the appropriate values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "952bf21e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# render the pvc spec\n",
+    "pvc_spec = template.render(\n",
+    "    pvc_name=\"PVC_NAME\",\n",
+    ")\n",
+    "# print the pvc spec\n",
+    "print(pvc_spec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b24a00fc",
+   "metadata": {},
+   "source": [
+    "Now, let's save it to disk:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fab2322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with open(\"./yaml/pvc.yml\", \"w\") as file:\n",
+    "    file.write(pvc_spec)"
    ]
   },
   {
@@ -55,18 +121,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "68134af3-f3e5-44c9-8867-2ede47217ccb",
+   "execution_count": null,
+   "id": "fb6482df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "persistentvolumeclaim/pvc-gp-engine-unoselab01 created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl apply -f ./yaml/pvc.yml"
    ]
@@ -88,21 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0a225e0c-1a84-4057-b14e-0434c7b21daa",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME                       STATUS   VOLUME                                     CAPACITY   ACCESS MODES   STORAGECLASS          AGE\n",
-      "pvc-gp-engine-unoselab01   Bound    pvc-2f4047a8-f2ed-41a8-8ffd-01e92fc89f9f   50Gi       RWX            rook-cephfs-central   7s\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "553144c5",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "! kubectl get pvc"
    ]
