--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step3-causal-model-job.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step3-causal-model-job.ipynb
@@ -56,19 +56,16 @@
    "source": [
     "# Step 2: Copying Our Script to the Cluster\n",
     "\n",
-    "### Step 2A: Spawn Pod with PVC\n",
-    "You now need to spawn a pod on the cluster with your peristent volume attached\n",
+    "##### Step 2A: Spawn Pod with PVC\n",
+    "- You now need to spawn a pod on the cluster with your peristent volume attached\n",
     "\n",
-    "``The link below is broken.``\n",
-    "\n",
-    "\n",
-    "For a refresher, [here is a sample YAML file](.yaml//pod_pvc.yml). Be sure to change the `name` of the pod and the `persistentVolume-name`\n",
+    "- For a refresher, [here is a sample YAML file](./yaml/pod_pvc.yml). Be sure to change the `name` of the pod and the `persistentVolume-name`\n",
     "\n",
     "```yaml\n",
     "apiVersion: v1\n",
     "kind: Pod\n",
     "metadata:\n",
-    "  name: {{pod name}}\n",
+    "  name: {{pod_name}}\n",
     "spec:\n",
     "  containers:\n",
     "  - name: pod-name-sso\n",
@@ -83,35 +80,94 @@
     "        cpu: 2\n",
     "    volumeMounts:\n",
     "    - mountPath: /data\n",
-    "      name: {{persistentVolume-name}}\n",
+    "      name: {{persistentVolume_name}}\n",
     "  volumes:\n",
     "    - name: {{persistentVolume-name}}\n",
     "      persistentVolumeClaim:\n",
-    "        claimName: {{persistentVolume-name}}\n",
-    "```\n",
-    "\n",
-    "Once you have updated those values, you can run the following cell:"
+    "        claimName: {{persistentVolume_name}}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "979000bd",
+   "metadata": {},
+   "source": [
+    "##### Step 2B : Let's use `jinja2` to fill in the missing values in our pod pvc template:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1c57558-9cd5-4daf-83c4-ff0b68c5ae14",
+   "id": "cd391fe5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl apply -f ./yaml/pod_pvc.yml\n",
+    "from jinja2 import Template\n",
     "\n",
-    "\"\"\"\n",
-    "The following error was caused by the above command.\n",
+    "# read in the template\n",
+    "with open('./yaml_templates/pod_pvc.yml') as file_:\n",
+    "    template = Template(file_.read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c493307",
+   "metadata": {},
+   "source": [
+    "Replace the arguments to the `render` function with the appropriate values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf03c435",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# render the pod spec\n",
+    "pod_pvc_spec = template.render(\n",
+    "    pod_name=\"POD_NAME\",\n",
+    "    persistentVolume_name=\"PERSISTENT_VOLUME_NAME\"\n",
+    ")\n",
+    "# print the pod spec\n",
+    "print(pod_pvc_spec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5cf3e98",
+   "metadata": {},
+   "source": [
+    "Now save it to our disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83dc1200",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "(base) jovyan@jupyter-myoungkyu-40unomaha-2eedu:~/0-kubectrl$ kubectl apply -f pod_pvc.yml \n",
-    "Error from server: error when creating \"pod_pvc.yml\": admission webhook \"pod.nrp-nautilus.io\" denied the request: Please accept the AUP at the user portal.\n",
-    "\"\"\"\n",
-    "\n",
-    "\"\"\"\n",
-    "https://portal.nrp-nautilus.io/ use the link , scroll down to Acceptable Use Policy and accept the policy\n",
-    "\"\"\""
+    "with open(\"./yaml/pod_pvc.yml\", \"w\") as file:\n",
+    "    file.write(pod_pvc_spec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56a97494",
+   "metadata": {},
+   "source": [
+    "Once you replaced all appropriate values in ``pod_pvc.yaml`` template , you can run the below command to create the pod with updated values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69368f35",
+   "metadata": {},
+   "source": [
+    "!kubectl apply -f ./yaml/pod_pvc.yml"
    ]
   },
   {
@@ -119,8 +175,8 @@
    "id": "4848d1b3-ed07-4d3b-9a4a-cb0ea5064a49",
    "metadata": {},
    "source": [
-    "### Step 2B: Copy the File to the PVC\n",
-    "Run the following cell until your pod is `Running`:"
+    "### Step 2C: Copy the File to the PVC\n",
+    "Run the following cell to check the status of your pod, Go to the next steps once it starts `Running`:"
    ]
   },
   {
@@ -217,14 +273,14 @@
    "source": [
     "# Step 3: Building the Job Specification YAML\n",
     "\n",
-    "We now have everything we need to run our causal-model job. The final to-do item is to create a YAML Job Specification file. There is a template file for this in the repository [here](./causal_model_job.yml)\n",
+    "We now have everything to run our causal-model job. The final to-do item is to create a YAML Job Specification file. There is a template file for this in the repository [here](./causal_model_job.yml)\n",
     "\n",
     "\n",
     "```yaml\n",
     "apiVersion: batch/v1\n",
     "kind: Job\n",
     "metadata:\n",
-    "  name: {{job name}}\n",
+    "  name: {{ job_name }}\n",
     "spec:\n",
     "  ttlSecondsAfterFinished: 86400 # a day\n",
     "  template:\n",
@@ -245,7 +301,7 @@
     "          workingDir: /data\n",
     "          command: [\"sh\", \"-c\", \"bash run_install.sh && python3 /data/causal-model-a.py\"]\n",
     "          volumeMounts:\n",
-    "            - name: pvc-gp-engine-unoselab01\n",
+    "            - name: {{ pvc_name }}\n",
     "              mountPath: /data\n",
     "          resources:\n",
     "            limits:\n",
@@ -268,7 +324,74 @@
     "\n",
     "```\n",
     "\n",
-    "Fill the job name and pvc name in the template"
+    "Fill the job name, pvc name and runAsUserID in the template"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2439da7d",
+   "metadata": {},
+   "source": [
+    "##### Step 3A : Let's use `jinja2` to fill in the missing values in our job template:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11ad1891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jinja2 import Template\n",
+    "\n",
+    "# read in the template\n",
+    "with open('./yaml_templates/causal_model_job.yml') as file_:\n",
+    "    template = Template(file_.read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dab210f4",
+   "metadata": {},
+   "source": [
+    "Replace the arguments to the `render` function with the appropriate values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2776d852",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# render the job spec\n",
+    "job_spec = template.render(\n",
+    "    job_name=\"JOB_NAME\",\n",
+    "    runAsUser=\"0\",\n",
+    "    pvc_name=\"PVC_NAME\",\n",
+    ")\n",
+    "# print the job spec\n",
+    "print(job_spec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8aab75f",
+   "metadata": {},
+   "source": [
+    "Now save it to our disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6605e9ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with open(\"./yaml/causal_model_job.yml\", \"w\") as file:\n",
+    "    file.write(job_spec)"
    ]
   },
   {
@@ -300,7 +423,7 @@
    "source": [
     "# Step 4: Start the Job\n",
     "\n",
-    "Run the cell below to start the job:"
+    "Once you updated the job template with updated values, run the cell below to start the job:"
    ]
   },
   {
