--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
@@ -375,8 +375,8 @@
     " \n",
     "- ``?`` : Wildcard Search for namespace \n",
     "- ``:`` : Search for resources\n",
-    "- ``:ns`` : List all the namespaces\n",
-    "- ``:pods`` : List all the pods\n",
+    "- ``:ns`` : List all namespaces\n",
+    "- ``:pods`` : List all pods\n",
     "- ``:jobs`` : List all jobs\n",
     "- ``:svc`` : List all services\n",
     "- ``l`` : Print container logs\n",
