--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step2-persistant_volume_creation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step2-persistant_volume_creation.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "## Step 4: Verify PVC Creation\n",
     "\n",
-    "The output of Step 3 should have been something such as:\n",
+    "The output of the above step should have been something such as:\n",
     "```\n",
     "persistentvolumeclaim/YOURNAME created\n",
     "```\n",
