--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step3-causal-model-job.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step3-causal-model-job.ipynb
@@ -26,7 +26,7 @@
     "# Step 0: Prerequisites\n",
     "\n",
     "\n",
-    "``Add a text to introduces some important k9s commands such as displaying namespaces, pods, etc.``\n",
+    "``Add a text to explain the differences between pvc.yml and pod_pvc.yml.``\n",
     "\n",
     "\n",
     "1. You must have been added to a Nautilus namespace \n",
