--- a/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
+++ b/CODE-RajulShakywar/CODE/example/Causal-model/Tutorial/Step1-kubectl_installation.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "## Step 1: Donwload Config file \n",
     "\n",
-    "##### Step 1A Download the config file from NRP portal - https://portal.nrp-nautilus.io"
+    "Download the config file from NRP portal - https://portal.nrp-nautilus.io"
    ]
   },
   {
@@ -35,29 +35,26 @@
     "tags": []
    },
    "source": [
-    "<img src=\"./media/get_config.png\" />"
+    "<img src=\"./media/get_config.png\" />\n",
+    "<img src=\"https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png\" />"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c2871a66",
-   "metadata": {},
-   "source": [
-    "##### Step 1B Open downloaded config file and verify your correct ``namespace`` name\n",
-    "\n",
-    " <img src=\"./media/verify_config_file.png\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "af0224eb",
+   "id": "cdde3f51-6c49-4485-802d-e2aaa7084a55",
    "metadata": {},
    "source": [
     "## Step 2: Upload Your Config\n",
-    "##### Step 2A Launch Jupyter Lab instance server ``Link`` - https://jupyterhub-west.nrp-nautilus.io\n",
     "\n",
-    "- There is a notebook to assist you [here](./Step0-Jupyter_lab_starting.ipynb) in launching Jupyter Lab instance.\n",
-    "- Click on the ``Upload symbol``, upload your config file you have downloaded from the NRP portal in your home directory once your jupyter lab instance is launched.\n"
+    "``Add a text how to access and open the Jupyter Lab interface.``\n",
+    "\n",
+    "``https://jupyterhub-west.nrp-nautilus.io/user/USER-NAME@unomaha.edu/lab``\n",
+    "\n",
+    "\n",
+    "\n",
+    "``Add a text to make sure that the config file includes namespace (gp-engine-unoselab01) correctly and copy it into a directory .kube. (See the notebook NautilusConfigSetup.ipynb)``\n",
+    "\n",
+    "From the Jupyter Lab interface, click on the Upload symbol, and select the config you have downloaded from the NRP portal"
    ]
   },
   {
@@ -66,76 +63,6 @@
    "metadata": {},
    "source": [
     "<img src=\"./media/UploadJupyter.png\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "625e3f3a",
-   "metadata": {},
-   "source": [
-    "##### Step 2B Getting the Path.\n",
-    "- First we will check if the config has been uploaded or placed in the ``home`` directory of our Jupyter Environment. \n",
-    "\n",
-    "- You will see a success message ``Found config`` with your config path once your config file is found. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "997a5fa5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "cfg_path = Path.home().resolve() / \"config\"\n",
-    "\n",
-    "if cfg_path.is_file():\n",
-    "    print(f\"Found config: {cfg_path}\")\n",
-    "else: \n",
-    "    cfg_dir = input(\"Enter directory with config: \")\n",
-    "    cfg_path = Path(cfg_dir).resolve() / \"config\"\n",
-    "    if cfg_path.is_file():\n",
-    "        print(f\"Found config: {cfg_path}\")\n",
-    "    else:\n",
-    "        print(\"ERROR: Re-run this cell and give correct directory\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0904afe0",
-   "metadata": {},
-   "source": [
-    "##### Step 2C Copy config file to .kube directory.\n",
-    "- Ensure the output of the previous cell is **Found Config: /path/to/config** before proceeding. \n",
-    "\n",
-    "- Copy config file to ``.kube`` directory so that **kubectl** and other kuberentes tool can access and manage our kubernetes cluster configuration.\n",
-    "\n",
-    "\n",
-    "- You will get ``SUCCESS: Copied config`` message after file is copied.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa4c68dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from shutil import copy\n",
-    "from pathlib import Path\n",
-    "\n",
-    "dest_dir = Path.home().resolve() / \".kube\"\n",
-    "dest_dir.mkdir(exist_ok=True)\n",
-    "dest_path = dest_dir / \"config\"\n",
-    "\n",
-    "if dest_path.is_file():\n",
-    "    print(\"SUCCESS: Config correctly configured\")\n",
-    "elif cfg_path.is_file() and dest_dir.is_dir():\n",
-    "    copy(cfg_path, dest_path)\n",
-    "    print(\"SUCCESS: Copied config\")\n",
-    "else:\n",
-    "    print(\"ERROR: Ensure you have correct config path\")"
    ]
   },
   {
@@ -172,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
+    "!curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
    ]
   },
   {
@@ -267,6 +194,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "87b3ee8f-b077-45ef-b082-3334babadf4b",
+   "metadata": {},
+   "source": [
+    "### To learn more about useful kubectl command \n",
+    "Refer: https://www.bluematador.com/learn/kubectl-cheatsheet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8df72418-24ca-454d-9f51-8a60d0075334",
    "metadata": {
     "tags": []
@@ -300,16 +236,6 @@
    "metadata": {},
    "source": [
     "Step II: Update PATH environment variable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8036597a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!curl -sS https://webi.sh/k9s | sh"
    ]
   },
   {
@@ -364,37 +290,6 @@
    "outputs": [],
    "source": [
     "!k9s"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e3720d80",
-   "metadata": {},
-   "source": [
-    "## Step 5: Know some useful k9s Commands\n",
-    " \n",
-    "- ``?`` : Wildcard Search for namespace \n",
-    "- ``:`` : Search for resources\n",
-    "- ``:ns`` : List all namespaces\n",
-    "- ``:pods`` : List all pods\n",
-    "- ``:jobs`` : List all jobs\n",
-    "- ``:svc`` : List all services\n",
-    "- ``l`` : Print container logs\n",
-    "- ``s`` : Go to container shell\n",
-    "- ``ctrl-d`` : Delete any resource\n",
-    "- ``:esc`` Go back\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "99b01102",
-   "metadata": {},
-   "source": [
-    "### To learn more about useful kubectl command \n",
-    "- K9s Cheatsheet: https://www.bluematador.com/learn/kubectl-cheatsheet\n",
-    "- K9s Video tutorial: https://youtu.be/ZwOOJqcKQ8g?si=EMe0vQ2oEBs1Zats\n",
-    " \n",
-    "<iframe width=\"760\" height=\"500\" src=\"https://www.youtube.com/embed/ZwOOJqcKQ8g?si=-LdEo_bO75pmVugp\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
    ]
   }
  ],
